IE scrollbar fix

--- a/nyaorebro.se/css/base.css
+++ b/nyaorebro.se/css/base.css
@@ -1219,10 +1219,9 @@ nav.or-secondary .or-content ul li a p {
 
 
 nav.or-secondary .or-content ul.or-extra {
+		background: rgb(248, 247, 247);
     background: rgba(248, 247, 247, 0.95);
 }
-
-
 
 nav.or-secondary .or-content ul.or-extra li {
     padding-top: 8px;
@@ -1255,6 +1254,7 @@ nav.or-secondary .or-content ul li a:hover p {
 }
 
 .or-no-scroll {
-    overflow-y: hidden;
+   overflow-y: hidden;
+	-ms-overflow-style:none;  
 }
 
